19-fargate-multiple-profiles/manifest/06-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  namespace: home-ns
  labels:
    app: home
    runon: fargate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
        runon: fargate
    spec:
      containers:
        - name: simple-home
          image: vietaws/eks:home
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: home-svc
  namespace: home-ns
  labels:
    app: home
    runon: fargate
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: home
  ports:
    - port: 8080
      targetPort: 8080
